# dovecot-password-scheme-plugin

./: .gitignore  README.md  configure.ac
src/: Makefile.am  password-scheme-plugin.c  password-scheme-plugin.h
